<resources>
    <string name="app_name">AuthForAEON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="login">Войти</string>
    <string name="welcome_icon">Welcome icon</string>
    <string name="logout">Logout</string>
</resources>